...
    android:clipToPadding="false"

    android:gravity="center_horizontal"
    tools:context="team31.cs2340.gatech.sheltermap.AccountActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shelter_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        android:clipChildren = "false"
        android:clipToPadding="false">
...
