...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <Button
        android:id="@+id/skip"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_anim"
        android:text="Skip"
        android:textColor="@color/text_icon"
...
