<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="team31.cs2340.gatech.sheltermap.SearchActivity"
    tools:showIn="@layout/activity_search">

    <Spinner
        android:id="@+id/GenderSpinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/AgeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Spinner
        android:id="@+id/AgeSpinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="223dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenderSpinner" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="322dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:text="Gender"
        app:layout_constraintBottom_toTopOf="@+id/GenderSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="298dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="174dp"
        android:text="Age"
        app:layout_constraintBottom_toTopOf="@+id/AgeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ShelterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:text="Shelter Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeSpinner" />

    <Button
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ShelterName"
        app:layout_constraintTop_toBottomOf="@+id/AgeSpinner" />

</android.support.constraint.ConstraintLayout>
